tests/tooling/fixtures/native/execution/positive/for_global_const_true_body_return_accept.objc3
module ForGlobalConstTrueBodyReturnAccept;

let gGate = 1;

fn main() -> i32 {
  for (let i = 0; gGate; i = i + 1) {
    return 42;
  }
}
