tests/tooling/fixtures/native/execution/negative/conditional_condition_function_value.objc3
module ConditionalConditionFunctionValueExec;

fn ready() -> bool {
  return true;
}

fn main() -> i32 {
  let x = ready ? 1 : 0;
  return x;
}
